--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		</div>
 	</header>
 	<main>
+	   <div class="top-background">
 		<div class="first-part">
 		    <div class="FirstText">
 		        <div class="Our">
@@ -34,6 +35,7 @@
 		    <div class="Player">
 		    	<a href="https://www.youtube.com"><img class="youtube" src="img/Player.gif" alt="Player" width="600" height="320"></a>
 		    </div>  
+		</div>
 		</div>
 		<div class="second-part">
 			<div class="text2">
